xml/src2/objects/Solution.object
<CustomObject>
    <fields>
        <fullName>Answer__c</fullName>
        <description>Interpretation of the Book of Discipline provided</description>
        <inlineHelpText>Interpretation of the Book of Discipline provided</inlineHelpText>
        <label>Answer</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Book_of_Disciple_year__c</fullName>
        <label>Book of Disciple year</label>
        <picklist>
            <picklistValues>
                <fullName>2004</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2008</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2012</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Full_Text_of_Paragraph__c</fullName>
        <description>Book of Discipline text</description>
        <inlineHelpText>Book of Discipline text</inlineHelpText>
        <label>Full Text of Paragraph</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Name_of_Organization__c</fullName>
        <label>Name of Organization</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Name_of_Requestor__c</fullName>
        <description>Person who asked the question</description>
        <inlineHelpText>Person who asked the question</inlineHelpText>
        <label>Name of Requestor</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Organization_of_Requestor__c</fullName>
        <inlineHelpText>Organizational affiliation or annual conference of requester</inlineHelpText>
        <label>Organization of Requestor</label>
        <length>99</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Question__c</fullName>
        <description>Question asked related to Book of Discipline</description>
        <inlineHelpText>Question asked related to Book of Discipline</inlineHelpText>
        <label>Question</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Relevant_Paragraphs__c</fullName>
        <description>Book of Discipline Paragraph number(s) interpreted</description>
        <inlineHelpText>Book of Discipline Paragraph number(s) interpreted</inlineHelpText>
        <label>Relevant Paragraphs</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Responder__c</fullName>
        <description>Person who responded to the question</description>
        <inlineHelpText>Person who responded to the question</inlineHelpText>
        <label>Responder</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Subject__c</fullName>
        <description>Summary of topic addressed in this solution</description>
        <inlineHelpText>Summary of topic addressed in this solution</inlineHelpText>
        <label>Subject</label>
        <type>TextArea</type>
    </fields>
    <listViews>
        <fullName>AllReviewedSolutions</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>SOLUTION.STATUS_CODE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>All Reviewed Solutions</label>
    </listViews>
    <listViews>
        <fullName>AllUnreviewedSolutions</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>SOLUTION.STATUS_CODE</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>All Unreviewed Solutions</label>
    </listViews>
    <listViews>
        <fullName>Solution_View</fullName>
        <columns>SOLUTION.SOLUTION_NUMBER</columns>
        <columns>Subject__c</columns>
        <columns>Name_of_Requestor__c</columns>
        <columns>Name_of_Organization__c</columns>
        <filterScope>Everything</filterScope>
        <label>Solution View</label>
    </listViews>
</CustomObject>